@@ -1,20 +1,28 @@
-package com.sprint.mission.discodeit.service.jcf;
+package com.sprint.mission.discodeit.service.file;
 
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
+import com.sprint.mission.discodeit.repository.file.FileChannelRepository;
 import com.sprint.mission.discodeit.service.ChannelService;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-public class JCFChannelService implements ChannelService {
+public class FileChannelService implements ChannelService {
 
   private final ChannelRepository channelRepository;
 
-  public JCFChannelService(ChannelRepository channelRepository) {
+  public FileChannelService(ChannelRepository channelRepository) {
     this.channelRepository = channelRepository;
+  }
+
+  public static FileChannelService from(String filePath) {
+    return new FileChannelService(FileChannelRepository.from(filePath));
+  }
+
+  public static FileChannelService createDefault() {
+    return new FileChannelService(FileChannelRepository.createDefault());
   }
 
   @Override
@@ -30,62 +38,60 @@ public class JCFChannelService implements ChannelService {
 
   @Override
   public List<Channel> searchChannels(UUID creatorId, String name) {
-    return channelRepository.findAll().stream()
-        .filter(channel -> (creatorId == null || channel.getCreator().getId().equals(creatorId))
-            && (name == null || channel.getName().contains(name)))
-        .collect(Collectors.toList());
+    List<Channel> allChannels = channelRepository.findAll();
+    return allChannels.stream()
+        .filter(channel -> creatorId == null || channel.getCreator().getId().equals(creatorId))
+        .filter(channel -> name == null || channel.getName().contains(name))
+        .toList();
   }
 
   @Override
   public List<Channel> getUserChannels(UUID userId) {
     return channelRepository.findAll().stream()
         .filter(channel -> channel.getParticipants().stream()
-            .anyMatch(p -> p.getId().equals(userId)))
-        .collect(Collectors.toList());
+            .anyMatch(user -> user.getId().equals(userId)))
+        .toList();
   }
 
   @Override
-  public Optional<Channel> updateChannelName(UUID channelId, String newName) {
+  public Optional<Channel> updateChannelName(UUID channelId, String name) {
     return channelRepository.findById(channelId)
         .map(channel -> {
-          channel.updateName(newName);
+          channel.updateName(name);
           return channelRepository.save(channel);
         });
   }
 
   @Override
-  public void addParticipant(UUID channelId, User user)
-      throws ChannelNotFoundException, ParticipantAlreadyExistsException {
-
+  public void addParticipant(UUID channelId, User user) {
     Channel channel = channelRepository.findById(channelId)
         .orElseThrow(() -> new ChannelNotFoundException(channelId));
 
-    if (!channel.addParticipant(user)) {
+    if (channel.addParticipant(user)) {
+      channelRepository.save(channel);
+    } else {
       throw new ParticipantAlreadyExistsException(user.getId(), channelId);
     }
-
-    channelRepository.save(channel); // 상태 변경 후 저장
   }
 
   @Override
-  public void removeParticipant(UUID channelId, UUID userId)
-      throws ChannelNotFoundException, ParticipantNotFoundException {
-
+  public void removeParticipant(UUID channelId, UUID userId) {
     Channel channel = channelRepository.findById(channelId)
         .orElseThrow(() -> new ChannelNotFoundException(channelId));
 
-    if (!channel.removeParticipant(userId)) {
+    boolean removed = channel.removeParticipant(userId);
+    if (!removed) {
       throw new ParticipantNotFoundException(userId, channelId);
     }
 
-    channelRepository.save(channel); // 상태 변경 후 저장
+    channelRepository.save(channel);
   }
 
   @Override
   public Optional<Channel> deleteChannel(UUID channelId) {
-    Optional<Channel> deleted = channelRepository.findById(channelId);
-    deleted.ifPresent(channel -> channelRepository.deleteById(channelId));
-    return deleted;
+    Optional<Channel> channel = channelRepository.findById(channelId);
+    channel.ifPresent(c -> channelRepository.deleteById(channelId));
+    return channel;
   }
 
   public static class ChannelNotFoundException extends RuntimeException {
