@@ -1,34 +1,39 @@
-package com.sprint.mission.discodeit.service.jcf;
+package com.sprint.mission.discodeit.service.file;
 
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.repository.MessageRepository;
+import com.sprint.mission.discodeit.repository.file.FileMessageRepository;
 import com.sprint.mission.discodeit.service.ChannelService;
 import com.sprint.mission.discodeit.service.MessageService;
 import com.sprint.mission.discodeit.service.UserService;
-import com.sprint.mission.discodeit.service.jcf.JCFChannelService.ChannelNotFoundException;
-import com.sprint.mission.discodeit.service.jcf.JCFUserService.UserNotFoundException;
-import com.sprint.mission.discodeit.service.jcf.JCFUserService.UserNotParticipantException;
-import java.util.Comparator;
+import com.sprint.mission.discodeit.service.file.FileChannelService.ChannelNotFoundException;
+import com.sprint.mission.discodeit.service.file.FileUserService.UserNotFoundException;
+import com.sprint.mission.discodeit.service.file.FileUserService.UserNotParticipantException;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-public class JCFMessageService implements MessageService {
+public class FileMessageService implements MessageService {
 
   private final MessageRepository messageRepository;
   private final UserService userService;
   private final ChannelService channelService;
 
-  public JCFMessageService(
-      MessageRepository messageRepository,
+  public FileMessageService(MessageRepository messageRepository,
       UserService userService,
-      ChannelService channelService
-  ) {
+      ChannelService channelService) {
     this.messageRepository = messageRepository;
     this.userService = userService;
     this.channelService = channelService;
+  }
+
+  public static FileMessageService from(UserService userService, ChannelService channelService, String filePath) {
+    return new FileMessageService(FileMessageRepository.from(filePath), userService, channelService);
+  }
+
+  public static FileMessageService createDefault(UserService userService, ChannelService channelService) {
+    return new FileMessageService(FileMessageRepository.createDefault(), userService, channelService);
   }
 
   @Override
@@ -56,23 +61,28 @@ public class JCFMessageService implements MessageService {
 
   @Override
   public List<Message> searchMessages(UUID channelId, UUID userId, String content) {
+    // 채널/사용자 존재 여부 검증 (필요 시)
+    if (channelId != null) {
+      channelService.getChannelById(channelId)
+          .orElseThrow(() -> new IllegalArgumentException("Channel not found: " + channelId));
+    }
+    if (userId != null) {
+      userService.getUserById(userId)
+          .orElseThrow(() -> new IllegalArgumentException("User not found: " + userId));
+    }
+
     return messageRepository.findAll().stream()
-        .filter(message -> !message.isDeleted())
-        .filter(message ->
-            (channelId == null || message.getChannelId().equals(channelId)) &&
-                (userId == null || message.getUserId().equals(userId)) &&
-                (content == null || message.getContent().contains(content)))
-        .sorted(Comparator.comparingLong(Message::getCreatedAt))
-        .collect(Collectors.toList());
+        .filter(message -> channelId == null || message.getChannelId().equals(channelId))
+        .filter(message -> userId == null || message.getUserId().equals(userId))
+        .filter(message -> content == null || message.getContent().contains(content))
+        .toList();
   }
 
   @Override
   public List<Message> getChannelMessages(UUID channelId) {
     return messageRepository.findAll().stream()
-        .filter(m -> !m.isDeleted())
-        .filter(m -> m.getChannelId().equals(channelId))
-        .sorted(Comparator.comparingLong(Message::getCreatedAt))
-        .collect(Collectors.toList());
+        .filter(message -> message.getChannelId().equals(channelId))
+        .toList();
   }
 
   @Override
@@ -86,18 +96,8 @@ public class JCFMessageService implements MessageService {
 
   @Override
   public Optional<Message> deleteMessage(UUID id) {
-    return messageRepository.findById(id)
-        .filter(message -> !message.isDeleted())
-        .map(message -> {
-          message.delete();
-          return messageRepository.save(message);
-        });
-  }
-
-  public static class MessageNotFoundException extends RuntimeException {
-
-    public MessageNotFoundException(UUID messageId) {
-      super("메시지를 찾을 수 없음: " + messageId);
-    }
+    Optional<Message> message = messageRepository.findById(id);
+    message.ifPresent(m -> messageRepository.deleteById(id));
+    return message;
   }
 }
